ページ追加

--- a/mvn/com/takhirata/index.html
+++ b/mvn/com/takhirata/index.html
@@ -9,7 +9,7 @@
         <a href="../">..</a>
       </li>
       <li>
-        <a href="takhirata/">takhirata/</a>
+        <a href="skype/">skype/</a>
       </li>
     </ul>
   </body>
