--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Github Page</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+  <head>
+    <title>totem3 github</title>
+  </head>
+  <body>
+    <h1>Github Pages</h1>
+    <ul>
+      <li>
+        <a href="mvn/">mvn/</a>
+      </li>
+    </ul>
+  </body>
+</html>
+
