リンク修正

--- a/mvn/com/index.html
+++ b/mvn/com/index.html
@@ -3,13 +3,13 @@
     <title>totem3 maven repository</title>
   </head>
   <body>
-    <h1>mvn/com/takhirata/</h1>
+    <h1>mvn/com</h1>
     <ul>
       <li>
         <a href="../">..</a>
       </li>
       <li>
-        <a href="skype/">skype/</a>
+        <a href="takhirata/">takhirata/</a>
       </li>
     </ul>
   </body>
