リンク修正

--- a/mvn/com/takhirata/index.html
+++ b/mvn/com/takhirata/index.html
@@ -9,7 +9,7 @@
         <a href="../">..</a>
       </li>
       <li>
-        <a href="skype/">skype/</a>
+        <a href="skype_2.9.2/">skype_2.9.2/</a>
       </li>
     </ul>
   </body>
