--- a/mvn/org/watermint/index.html
+++ b/mvn/org/watermint/index.html
@@ -4,13 +4,12 @@
     <title>totem3 maven repository</title>
   </head>
   <body>
-    <h1>mvn</h1>
+    <h1>watermint</h1>
     <ul>
       <li>
         <a href="../">..</a>
       </li>
-      <li><a href="com/">com/</a></li>
-      <li><a href="org/">org/</a></li>
+      <li><a href="etude-chatwork-core_2.10/">etude-chatwork-core_2.10/</a></li>
     </ul>
   </body>
 </html>
