--- a/mvn/org/watermint/etude-chatwork-core_2.10/index.html
+++ b/mvn/org/watermint/etude-chatwork-core_2.10/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>totem3 github</title>
+    <title>totem3 maven repository</title>
   </head>
   <body>
-    <h1>Github Pages</h1>
+    <h1>etude-chatwork-core_2.10</h1>
     <ul>
-      <li><a href="mvn/">mvn/</a></li>
+      <li>
+        <a href="../">..</a>
+      </li>
+      <li><a href="0.0.16/">0.0.16/</a></li>
     </ul>
   </body>
 </html>
