--- a/mvn/org/watermint/index.html
+++ b/mvn/org/watermint/index.html
@@ -4,12 +4,15 @@
     <title>totem3 maven repository</title>
   </head>
   <body>
-    <h1>watermint</h1>
+    <h1>mvn/org/watermint</h1>
     <ul>
       <li>
         <a href="../">..</a>
       </li>
-      <li><a href="etude-chatwork-core_2.10/">etude-chatwork-core_2.10/</a></li>
+      <li><a href="etude-chatwork-core_2.10">etude-chatwork-core_2.10</a></li>
+      <li><a href="etude-foundation-domain_2.10">etude-foundation-domain_2.10</a></li>
+      <li><a href="etude-foundation-http_2.10">etude-foundation-http_2.10</a></li>
+      <li><a href="etude-foundation-utility_2.10">etude-foundation-utility_2.10</a></li>
     </ul>
   </body>
 </html>
