--- a/mvn/org/watermint/etude-chatwork-core_2.10/0.0.16/index.html
+++ b/mvn/org/watermint/etude-chatwork-core_2.10/0.0.16/index.html
@@ -4,7 +4,7 @@
     <title>totem3 maven repository</title>
   </head>
   <body>
-    <h1>0.0.16/</h1>
+    <h1>mvn/org/watermint/etude-chatwork-core_2/0.0.16/</h1>
     <ul>
       <li>
         <a href="../">..</a>
