--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>totem3 github</title>
   </head>
   <body>
-    <h1>Github Pages</h1>
+    <h1>totem3.com</h1>
     <ul>
       <li><a href="mvn/">mvn/</a></li>
     </ul>
