--- a/index.html
+++ b/index.html
@@ -2,12 +2,50 @@
 <html>
   <head>
     <title>totem3 github</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>totem3.com</h1>
-    <ul>
-      <li><a href="mvn/">mvn/</a></li>
-    </ul>
+    <header>
+      <div class="header" role="header">
+        <h1>totem3.com</h1>
+      </div>
+    </header>
+    <div class="profile">
+      <div class="info">
+        <div class="photo">
+            <img src="images/bzp.jpg" alt="pic" width="45" height="45" />
+        </div>
+        <div class="name">totem3</div>
+      </div>
+    </div>
+    <div class="social">
+      <ul>
+        <li>
+          <a href="https://twitter.com/takhirata">
+            <i class="fa fa-twitter"></i>
+          </a></li>
+        <li>
+          <a href="https://www.facebook.com/takhirata6">
+            <i class="fa fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/totem3">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://plus.google.com/115149294853074357177/posts">
+            <i class="fa fa-google-plus"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="contents">
+      <ul>
+        <li><a href="mvn/">Maven Repository</a></li>
+      </ul>
+    </div>
   </body>
 </html>
-
