--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             <i class="fa fa-google-plus"></i>
           </a>
         </li>
+        <li>
+          <a href="http://totem3.hatenablog.jp/">
+            <i class="fa fa-book"></i>
+          </a>
+         </li>
       </ul>
     </div>
     <div class="contents">
